[package]
name = "raylib-wasm"
version = "0.0.6"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
license = "MIT"
description = "raylib native/wasm bindings"
repository = "https://github.com/rakivo/raylib-light"
keywords = ["bindings", "raylib", "gamedev", "web", "wasm"]
categories = ["api-bindings", "game-engines", "graphics"]
edition = "2021"

[features]
web = []
native = []

[lib]
crate-type = ["rlib"]
path = "raylib.rs"
